salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/OSFCO_Resumen_de_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Resumen de Oportunidad</label>
    <nameField>
        <label>Nombre de Resumen de Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumen de Oportunidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>