salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id. de la cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resumen de Oportunidades</relationshipLabel>
    <relationshipName>Resumen_de_Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>