salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Etapa__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Etapa__c</fullName>
    <label>Etapa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>