salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Fecha_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Fecha_de_cierre__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>