salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resumen de Oportunidades</relationshipLabel>
    <relationshipName>Resumen_de_Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>