salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Solucion__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Solucion__c</fullName>
    <label>Solución</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFCO_Tipo_de_Solucion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>PPA Green</fullName>
            </value>
            <value>
                <fullName>PPA+PV</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>Ducto</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>Generación OnSite</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>PPA Renovable</fullName>
            </value>
            <value>
                <fullName>PPA Estandar</fullName>
            </value>
            <value>
                <fullName>Green PPA-Solar</fullName>
            </value>
            <value>
                <fullName>Green PPA-Hydro</fullName>
            </value>
            <value>
                <fullName>Green PPA-Wind</fullName>
            </value>
            <value>
                <fullName>HVAC&amp;DHC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>