salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFCO_Tipo_de_Solucion__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Tipo_de_Solucion__c</fullName>
    <label>Tipo de solución</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suministro Eléctrico</fullName>
            </value>
            <value>
                <fullName>Transmisión</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Soluciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>