salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFPE_fld_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>