salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/fields/OSFPE_fld_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Opportunity_Record_Type__c</fullName>
    <label>Tipo de registro Oportunidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>