salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/recordTypes/OSFPE_rt_ResumenOportunidad.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_ResumenOportunidad</fullName>
    <active>true</active>
    <label>Perú</label>
</RecordType>