salesforce_sfdx/main/default/objects/OSFCO_Resumen_de_Oportunidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFPE_fld_Opportunity_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>